checkstyle continued